--- a/juspay-dashboard/package.json
+++ b/juspay-dashboard/package.json
@@ -18,7 +18,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^7.9.1",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "recharts": "^3.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
