--- a/juspay-dashboard/package.json
+++ b/juspay-dashboard/package.json
@@ -15,7 +15,9 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@tanstack/react-query": "^5.89.0",
+    "chart.js": "^4.5.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-router": "^7.9.1",
     "react-router-dom": "^6.16.0",
